added editing options in blog body

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,9 +12,10 @@
             </div>
             <div class="field">
                 <label>Blog content</label>
-                <textarea name="blog[body]"></textarea>
+                <textarea name="blog[body]" id="textAreaBody" cols="30" rows="10"></textarea>
             </div>
             <input type="submit" class="ui violet big inverted button">
         </form>
     </div>
+
 <% include partials/footer %>
