--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,9 @@
         <title>Blog Site</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
+        <script src="http://cdn.tinymce.com/4/tinymce.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+        <script>tinymce.init({selector:'textarea'});</script>
     </head>
     <body>
         <div class="ui fixed inverted menu">
