--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
         <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-        <script>tinymce.init({selector:'textarea'});</script>
+        <script>tinymce.init({selector:'textarea',height:'800',menubar:false});</script>
     </head>
     <body>
         <div class="ui fixed inverted menu">
